...
            draggable
            onDragEnd={(e) => setMarkerCoord(e.nativeEvent.coordinate)}
          />
        )}
      </MapView>
      <View style={styles.buttonContainer}>
        <Button title="Siguiente" onPress={handleContinue} />
      </View>
    </View>
  );
}

const styles = StyleSheet.create({
...
