appId: com.jhon_steven_23.DeficienciasVialesJhonn
---
- launchApp:
    clearState: false

- tapOn: "Avisos"

- extendedWaitUntil:
    visible: "Historial de Avisos"
    timeout: 10000

- runFlow:
    when:
      notVisible: "No tienes avisos."
    commands:
      - tapOn:
          index: 0

      - extendedWaitUntil:
          visible: "Detalle del Reporte"
          timeout: 10000

      - assertVisible: "Resumen del Reporte"
      - assertVisible: "Ubicación"

      - back

      - assertVisible: "Historial de Avisos"
